--- a/src/app/hero-search/hero-search.component.html
+++ b/src/app/hero-search/hero-search.component.html
@@ -1,5 +1,5 @@
 <div id="search-component">
-  <h4>Hero Search</h4>
+  <h4>Hero Search</h4>  
 
   <input #searchBox id="search-box" (keyup)="search(searchBox.value)" />
 
@@ -10,4 +10,7 @@
       </a>
     </li>
   </ul>
+  <style>
+    h4 {text-align: center;}
+  </style>
 </div>
