--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -1,78 +1,74 @@
-/* DashboardComponent's private CSS styles */
-[class*='col-'] {
-  float: left;
-  padding-right: 20px;
-  padding-bottom: 20px;
+/* HeroesComponent's private CSS styles */
+.heroes {
+  margin: 30px;
+  list-style-type: none;
+  padding: 0;
+  width: 100%;
 }
 
-  [class*='col-']:last-of-type {
-    padding-right: 0;
-  }
-
-a {
-  text-decoration: none;
-}
-
-*, *:after, *:before {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-}
-
-h3 {
-  text-align: center;
-  margin-bottom: 0;
-}
-
-h4 {
-  position: relative;
-}
-
-.grid {
-  margin: 0;
-}
-
-.col-1-4 {
-  width: 25%;
-}
-
-.module {
-  padding: 20px;
-  text-align: center;
-  color: #eee;
-  max-height: 120px;
-  min-width: 120px;
-  background-color: #607d8b;
-  border-radius: 2px;
-}
-
-  .module:hover {
-    background-color: #eee;
+  .heroes li {
+    display: inline-block;
     cursor: pointer;
-    color: #607d8b;
+    background-color: #EEE;
+    margin: 5px;
+    border: 1px solid #efefef;
+    padding: 10px;
   }
 
-.grid-pad {
-  padding: 10px 0;
+    .heroes li:hover {
+      color: #607D8B;
+      background-color: #DDD;
+      left: .1em;
+    }
+
+  .heroes a {
+    color: #888;
+    text-decoration: none;
+    position: relative;
+    display: block;
+    width: 220px;
+    height: 5px;
+  }
+
+    .heroes a:hover {
+      color: #607D8B;
+    }
+
+  .heroes .badge {
+    display: inline-block;
+    font-size: small;
+    color: white;
+    padding: 0.8em 0.7em 0 0.7em;
+    background-color: #607D8B;
+    line-height: 1em;
+    position: relative;
+    left: -1px;
+    top: -4px;
+    height: 1.8em;
+    min-width: 16px;
+    text-align: right;
+    margin-right: .8em;
+    border-radius: 4px 0 0 4px;
+  }
+
+button {
+  background-color: #eee;
+  border: none;
+  padding: 5px 10px;
+  border-radius: 4px;
+  cursor: pointer;
+  cursor: hand;
+  font-family: Arial;
 }
 
-  .grid-pad > [class*='col-']:last-of-type {
-    padding-right: 20px;
+  button:hover {
+    background-color: #cfd8dc;
   }
 
-@media (max-width: 600px) {
-  .module {
-    font-size: 10px;
-    max-height: 75px;
+  button.delete {
+    position: relative;
+    left: 194px;
+    top: -2px;
+    background-color: gray !important;
+    color: white;
   }
-}
-
-@media (max-width: 1024px) {
-  .grid {
-    margin: 0;
-  }
-
-  .module {
-    min-width: 60px;
-  }
-}
