--- a/src/app/hero-search/hero-search.component.css
+++ b/src/app/hero-search/hero-search.component.css
@@ -3,7 +3,7 @@
   border-bottom: 1px solid gray;
   border-left: 1px solid gray;
   border-right: 1px solid gray;
-  width: 195px;
+  width: 100%;
   height: 16px;
   padding: 5px;
   background-color: white;
@@ -30,8 +30,10 @@
     }
 
 #search-box {
-  width: 200px;
-  height: 20px;
+  width: 100%;
+  height: 30px;
+  border-radius: 10px;
+  padding-left: 8px;
 }
 
 
