--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,8 +13,7 @@
 </style>
 <nav>
   <a routerLink="/dashboard">Dashboard</a>
-  <a routerLink="/heroes">Heroes</a>
+  <a routerLink="/heroes">History</a>
 </nav>
 </body>
 <router-outlet></router-outlet>
-<app-messages></app-messages>
