--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,1 +1,8 @@
 <app-messages></app-messages>
+
+<script></script>
+
+<div>
+  <button (click)="getTime()">aa</button>
+  <p id="test">abc</p>
+</div>
